# log-processing-toolbox

./: .gitignore  pyproject.toml
example/: cobalt_strike.py
example/ftp/: sftp.py
example/ha_proxy/: connection.py
example/open_vpn/: journal.py
example/ssh/: brute_force_graph.py  brute_force_map.py  impossible_travel.py  journal.py  successful_login.py  successful_login_pcap.py
example/tor/: journal.py
src/log_processing_toolbox/: __init__.py
src/log_processing_toolbox/analysis/: ip.py  ssh.py
src/log_processing_toolbox/enrichment/: ip.py
src/log_processing_toolbox/plugins/: geodesic.py
src/log_processing_toolbox/source/application/: cobalt_strike_team.py  open_vpn.py  tor.py  wireguard.py
src/log_processing_toolbox/source/os/: ha_proxy.py  http.py  sftp.py  ssh.py  tor.py
src/log_processing_toolbox/source/zeek/: conn.py  files.py  http.py  ssh.py
src/log_processing_toolbox/visualization/: map.py  timeline.py
