[project]
name = "log-processing-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pbusenius", email = "patrick.busenius@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "folium>=0.18.0",
    "polars>=1.8.2",
    "polars-maxminddb>=0.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
